--- a/src/templates/card.hbs
+++ b/src/templates/card.hbs
@@ -1,15 +1,15 @@
 
 <div class="country-symbols">
-    <img src={{flags.svg}} alt={{flag}} width="60" height="60">
+    <img class="country-symbols__img" src={{flags.svg}} alt={{flag}} width="50" height="50">
     <h2 class="country-name">{{name.official}}</h2>
 </div>
 
 
 
-<ul class="country-list">
-<li class="country-list__item">Capital: {{capital}}</li>
-<li class="country-list__item">Population: {{population}}</li>
-<li class="country-list__item">Languages: {{#each languages}}
+<ul class="country-list-div">
+<li class="country-list-div__item"><span class="bold">Capital:</span>{{capital}}</li>
+<li class="country-list-div__item"><span class="bold">Population:</span>{{population}}</li>
+<li class="country-list-div__item"><span class="bold">Languages:</span>{{#each languages}}
     {{#if @index includeZero=false}} , {{/if}}
     {{this}}
     {{/each}}
